fix the overflow x in the body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,9 @@
 .container {
   margin: 0 auto;
 }
+body{
+  overflow-x: hidden;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
